src/objects/Diary__c.object
<CustomObject>
    <description>For Diary Notes LWC component</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Diaries</relationshipLabel>
        <relationshipName>Diaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Diary</label>
    <nameField>
        <label>Diary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>